LayoutTests:

Reviewed by Hyatt.

        - test for http://bugs.webkit.org/show_bug.cgi?id=13072
          REGRESSION (r15617): white-space: pre-wrap breaks off the last character of a wide word

        * fast/text/whitespace/pre-wrap-last-char-expected.checksum: Added.
        * fast/text/whitespace/pre-wrap-last-char-expected.png: Added.
        * fast/text/whitespace/pre-wrap-last-char-expected.txt: Added.
        * fast/text/whitespace/pre-wrap-last-char.html: Added.

WebCore:

        Reviewed by Hyatt.

        - fix http://bugs.webkit.org/show_bug.cgi?id=13072
          REGRESSION (r15617): white-space: pre-wrap breaks off the last character of a wide word

        Test: fast/text/whitespace/pre-wrap-last-char.html

        * rendering/bidi.cpp:
        (WebCore::RenderBlock::findNextLineBreak): Undid the change from r15617.



Canonical link: https://commits.webkit.org/16996@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@20200 268f45cc-cd09-0410-ab3c-d52691b4dbfc