WebCore/rendering/bidi.cpp
@@ -2582,7 +2582,7 @@ BidiIterator RenderBlock::findNextLineBreak(BidiIterator &start, BidiState &bidi
 
     if (lBreak == start && !lBreak.obj->isBR()) {
         // we just add as much as possible
-        if (shouldPreserveNewline(this)) {
+        if (style()->whiteSpace() == PRE) {
             // FIXME: Don't really understand this case.
             if (pos != 0) {
                 lBreak.obj = o;
